# hard_semaphore

./: .dockerignore  .gitignore  pyproject.toml  start_all.sh
ansible/: vm_worker.yml
bot_work/: README.md
docker/: docker-compose.yml
docker/elasticsearch/: elasticsearch.yml
docker/filebeat/: filebeat.yml
docker/kibana/alerts/: high_cpu.yml
docker/logstash/pipeline/: logstash.conf
filebeat/: filebeat.yml
kibana/: vm_state.json
kibana/alerts/: high_cpu.conf
logstash/: logstash.conf  pipeline-all.conf
opentofu/: hosts_file_creater.sh  main.tf  outputs.tf  terraform.tfvars  variables.tf
semaphore/: templates.json
